k8s-cluster/cd-test/backend-isolated.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isolates-test
  namespace: test-env
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-isolated
  template:
    metadata:
      labels:
        app: backend-isolated
    spec:
      containers:
        - name: backend-test
          image: registry.digitalocean.com/swipebay-registry/backend:90bc61b
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "768Mi"
              cpu: "500m"
