k8s-cluster/cd-test/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: isolates-service
  namespace: test-env
spec:
  selector:
    app: backend-isolated
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
